# search_engine

./: CMakeLists.txt  README.md
resources/: answers.json  config.json  requests.json
src/: ConverterJSON.cpp  ConverterJSON.h  InvertedIndex.cpp  InvertedIndex.h  SearchServer.cpp  SearchServer.h  main.cpp
tests/: GTest.cpp
